feat(admin): 添加配置管理功能并优化过滤器管理
- 新增配置管理API接口和数据模型
- 添加SQLite数据库文件到.gitignore忽略列表
- 在application.yml中添加权限前缀匹配开关配置
- 移除Nacos注册中心配置文件
- 将SQLite数据库从内存模式改为文件持久化存储
- 添加Element Plus图标组件声明
- 重构过滤器控制器权限验证规则
- 添加过滤器使用路由查询功能
- 优化过滤器类型配置字段定义
- 添加响应式断点样式混入
- 移除Spring Boot Starter中自动生成的配置类