@@ -4,7 +4,6 @@ import cn.dev33.satoken.stp.StpUtil;
 import com.mybatisflex.core.query.QueryWrapper;
 import com.mybatisflex.spring.service.impl.ServiceImpl;
 import com.muxin.gateway.admin.entity.GwFilter;
-import com.muxin.gateway.admin.entity.GwRouteFilter;
 import static com.muxin.gateway.admin.entity.table.Tables.*;
 import com.muxin.gateway.admin.exception.BusinessException;
 import com.muxin.gateway.admin.mapper.FilterMapper;
@@ -12,9 +11,11 @@ import com.muxin.gateway.admin.mapper.RouteFilterMapper;
 import com.muxin.gateway.admin.model.dto.FilterCreateDTO;
 import com.muxin.gateway.admin.model.dto.FilterQueryDTO;
 import com.muxin.gateway.admin.model.dto.FilterUpdateDTO;
+import com.muxin.gateway.admin.model.vo.ConfigFieldVO;
 import com.muxin.gateway.admin.model.vo.FilterTypeVO;
 import com.muxin.gateway.admin.model.vo.FilterVO;
 import com.muxin.gateway.admin.model.vo.PageVO;
+import com.muxin.gateway.admin.model.vo.RouteSimpleVO;
 import com.muxin.gateway.admin.service.FilterService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -45,13 +46,11 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
     
     @Override
     public PageVO<FilterVO> pageQuery(FilterQueryDTO query) {
-        // 构建查询条件
         QueryWrapper wrapper = QueryWrapper.create()
                 .select()
                 .from(GW_FILTER)
                 .where(GW_FILTER.DELETED.eq(false));
         
-        // 动态条件
         if (StringUtils.hasText(query.getFilterName())) {
             wrapper.and(GW_FILTER.FILTER_NAME.like("%" + query.getFilterName() + "%"));
         }
@@ -68,17 +67,14 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
             wrapper.and(GW_FILTER.IS_SYSTEM.eq(query.getIsSystem()));
         }
         
-        // 排序
         wrapper.orderBy(GW_FILTER.FILTER_TYPE.asc(), 
                        GW_FILTER.ORDER.asc(),
                        GW_FILTER.CREATE_TIME.desc());
         
-        // 分页查询
         com.mybatisflex.core.paginate.Page<GwFilter> page = page(
                 new com.mybatisflex.core.paginate.Page<>(query.getPageNum(), query.getPageSize()), 
                 wrapper);
         
-        // 转换为VO
         List<FilterVO> voList = page.getRecords().stream()
                 .map(this::convertToVO)
                 .collect(Collectors.toList());
@@ -100,8 +96,8 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
                 .where(GW_FILTER.DELETED.eq(false))
                 .and(GW_FILTER.ENABLED.eq(true))
                 .orderBy(GW_FILTER.FILTER_TYPE.asc(), 
-                        GW_FILTER.ORDER.asc(),
-                        GW_FILTER.CREATE_TIME.desc());
+                         GW_FILTER.ORDER.asc(),
+                         GW_FILTER.CREATE_TIME.desc());
         
         List<GwFilter> filters = list(wrapper);
         return filters.stream()
@@ -117,7 +113,7 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
                 .where(GW_FILTER.DELETED.eq(false))
                 .and(GW_FILTER.FILTER_TYPE.eq(type))
                 .orderBy(GW_FILTER.ORDER.asc(), 
-                        GW_FILTER.CREATE_TIME.desc());
+                         GW_FILTER.CREATE_TIME.desc());
         
         List<GwFilter> filters = list(wrapper);
         return filters.stream()
@@ -137,7 +133,6 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
     @Override
     @Transactional(rollbackFor = Exception.class)
     public Long createFilter(FilterCreateDTO dto) {
-        // 创建过滤器
         GwFilter filter = new GwFilter();
         BeanUtils.copyProperties(dto, filter);
         filter.setIsSystem(false);
@@ -161,12 +156,10 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
             throw new BusinessException("过滤器不存在");
         }
         
-        // 系统内置过滤器不允许修改
         if (filter.getIsSystem()) {
             throw new BusinessException("系统内置过滤器不允许修改");
         }
         
-        // 更新过滤器信息
         BeanUtils.copyProperties(dto, filter);
         filter.setUpdateTime(LocalDateTime.now());
         filter.setUpdateBy(StpUtil.getLoginIdAsString());
@@ -184,12 +177,10 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
             throw new BusinessException("过滤器不存在");
         }
         
-        // 系统内置过滤器不允许删除
         if (filter.getIsSystem()) {
             throw new BusinessException("系统内置过滤器不允许删除");
         }
         
-        // 检查是否有路由使用该过滤器（使用MyBatis-Flex查询）
         QueryWrapper wrapper = QueryWrapper.create()
                 .select()
                 .from(GW_ROUTE_FILTER)
@@ -200,7 +191,6 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
             throw new BusinessException("该过滤器正在被" + routeCount + "个路由使用，无法删除");
         }
         
-        // 逻辑删除
         filter.setDeleted(true);
         filter.setUpdateTime(LocalDateTime.now());
         filter.setUpdateBy(StpUtil.getLoginIdAsString());
@@ -233,39 +223,84 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
     
     @Override
     public List<FilterTypeVO> getFilterTypes() {
-        // 定义过滤器类型
         List<FilterTypeVO> types = new ArrayList<>();
         
-        types.add(new FilterTypeVO("AddRequestHeader", "添加请求头", 
-                "向请求中添加Header", Map.of("name", "X-Request-From", "value", "gateway")));
+        types.add(new FilterTypeVO("AddRequestHeader", "添加请求头", "向请求中添加Header",
+                Map.of("name", "X-Request-From", "value", "gateway"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("name").label("Header名称").type("string").required(true).placeholder("X-Custom-Header").build(),
+                        ConfigFieldVO.builder().field("value").label("Header值").type("string").required(true).placeholder("custom-value").build()
+                )));
         
-        types.add(new FilterTypeVO("AddResponseHeader", "添加响应头", 
-                "向响应中添加Header", Map.of("name", "X-Response-From", "value", "gateway")));
+        types.add(new FilterTypeVO("AddResponseHeader", "添加响应头", "向响应中添加Header",
+                Map.of("name", "X-Response-From", "value", "gateway"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("name").label("Header名称").type("string").required(true).placeholder("X-Custom-Header").build(),
+                        ConfigFieldVO.builder().field("value").label("Header值").type("string").required(true).placeholder("custom-value").build()
+                )));
         
-        types.add(new FilterTypeVO("RemoveRequestHeader", "移除请求头", 
-                "移除请求中的Header", Map.of("name", "X-Internal-Header")));
+        types.add(new FilterTypeVO("RemoveRequestHeader", "移除请求头", "移除请求中的Header",
+                Map.of("name", "X-Internal-Header"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("name").label("Header名称").type("string").required(true).placeholder("X-Remove-Header").build()
+                )));
         
-        types.add(new FilterTypeVO("RemoveResponseHeader", "移除响应头", 
-                "移除响应中的Header", Map.of("name", "X-Internal-Response")));
+        types.add(new FilterTypeVO("RemoveResponseHeader", "移除响应头", "移除响应中的Header",
+                Map.of("name", "X-Internal-Response"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("name").label("Header名称").type("string").required(true).placeholder("X-Remove-Header").build()
+                )));
         
-        types.add(new FilterTypeVO("RewritePath", "路径重写", 
-                "重写请求路径", Map.of("regexp", "/api/v1/(?<segment>.*)", "replacement", "/${segment}")));
+        types.add(new FilterTypeVO("RewritePath", "路径重写", "重写请求路径",
+                Map.of("regexp", "/api/v1/(?<segment>.*)", "replacement", "/${segment}"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("regexp").label("匹配正则").type("string").required(true).placeholder("/api/v1/(?<segment>.*)").description("正则表达式，支持命名分组").build(),
+                        ConfigFieldVO.builder().field("replacement").label("替换路径").type("string").required(true).placeholder("/${segment}").description("替换后的路径，可使用${group}引用分组").build()
+                )));
         
-        types.add(new FilterTypeVO("RequestRateLimiter", "请求限流", 
-                "限制请求速率", Map.of("replenishRate", 10, "burstCapacity", 20)));
+        types.add(new FilterTypeVO("RequestRateLimiter", "请求限流", "限制请求速率",
+                Map.of("replenishRate", 10, "burstCapacity", 20),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("replenishRate").label("令牌填充速率").type("number").required(true).defaultValue(10).description("每秒填充的令牌数").build(),
+                        ConfigFieldVO.builder().field("burstCapacity").label("令牌桶容量").type("number").required(true).defaultValue(20).description("令牌桶最大容量").build()
+                )));
         
-        types.add(new FilterTypeVO("CircuitBreaker", "熔断器", 
-                "提供熔断功能", Map.of("name", "myCircuitBreaker", "fallbackUri", "/fallback")));
+        types.add(new FilterTypeVO("CircuitBreaker", "熔断器", "提供熔断功能",
+                Map.of("name", "myCircuitBreaker", "fallbackUri", "/fallback"),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("name").label("熔断器名称").type("string").required(true).placeholder("myCircuitBreaker").build(),
+                        ConfigFieldVO.builder().field("fallbackUri").label("降级URI").type("string").required(false).placeholder("/fallback").description("熔断后的降级处理路径").build()
+                )));
         
-        types.add(new FilterTypeVO("Retry", "重试", 
-                "失败重试", Map.of("retries", 3, "statuses", List.of("BAD_GATEWAY"), "methods", List.of("GET", "POST"))));
+        types.add(new FilterTypeVO("Retry", "重试", "失败重试",
+                Map.of("retries", 3, "statuses", List.of("BAD_GATEWAY"), "methods", List.of("GET", "POST")),
+                Arrays.asList(
+                        ConfigFieldVO.builder().field("retries").label("重试次数").type("number").required(true).defaultValue(3).description("最大重试次数").build(),
+                        ConfigFieldVO.builder().field("statuses").label("重试状态码").type("array").required(false).defaultValue(Arrays.asList("BAD_GATEWAY", "SERVICE_UNAVAILABLE")).description("触发重试的HTTP状态码").build(),
+                        ConfigFieldVO.builder().field("methods").label("重试方法").type("array").required(false).defaultValue(Arrays.asList("GET", "POST")).description("允许重试的HTTP方法").build()
+                )));
         
         return types;
     }
+
+    @Override
+    public List<RouteSimpleVO> getUsedRoutes(Long id) {
+        GwFilter filter = getById(id);
+        if (filter == null || filter.getDeleted()) {
+            throw new BusinessException("过滤器不存在");
+        }
+        
+        List<Map<String, Object>> routes = routeFilterMapper.findRoutesByFilterId(id);
+        return routes.stream()
+                .map(map -> RouteSimpleVO.builder()
+                        .id(((Number) map.get("id")).longValue())
+                        .routeId((String) map.get("routeId"))
+                        .routeName((String) map.get("routeName"))
+                        .enabled((Boolean) map.get("enabled"))
+                        .build())
+                .collect(Collectors.toList());
+    }
     
-    /**
-     * 更新状态
-     */
     private void updateStatus(Long id, Boolean enabled) {
         GwFilter filter = getById(id);
         if (filter == null || filter.getDeleted()) {
@@ -280,14 +315,10 @@ public class FilterServiceImpl extends ServiceImpl<FilterMapper, GwFilter> imple
         log.info("更新过滤器状态成功：{}，状态：{}", filter.getFilterName(), enabled ? "启用" : "禁用");
     }
     
-    /**
-     * 转换为VO
-     */
     private FilterVO convertToVO(GwFilter filter) {
         FilterVO vo = new FilterVO();
         BeanUtils.copyProperties(filter, vo);
         
-        // 查询使用次数（使用MyBatis-Flex查询）
         QueryWrapper wrapper = QueryWrapper.create()
                 .select()
                 .from(GW_ROUTE_FILTER)
